Adding more photos.

--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -42,7 +42,8 @@
         <ul>
             <li>
                 <span class="contrib">Corey Abel</span>
-
+                is the editor of <i>Intellectual Legacy of Michael Oakeshott</i> 
+                and <i>The Meanings of Michael Oakeshott's Conservatism</i>.
             </li>
 
             <li>
@@ -228,6 +229,8 @@
                 McCarthy Journal</i>, <i>Religion &amp; Literature</i>, and
                 other journals.  He is currently writing about the philosopher
                 William Desmond's approach to literature.
+                <br>
+                <img src="graphics/Knepper.jpg" width="14%" class="center-img">
             </li>
 
             <li>
@@ -263,6 +266,21 @@
                 and the Critique of Modernity: Pluralist and Emergentist
                 Directions</i> (2017).
                 </a>
+                <br>
+                <img src="graphics/Lowney.jpg" width="14%" class="center-img">
+            </li>
+
+            <li>
+                <a name="mahoney">
+                <span class="contrib">Daniel J. Mahoney</span>,
+                Professor of Politics at Assumption College in
+                Worcester, Massachusetts, has written widely on politics and
+                political thought. His most recent book is 
+                <i>The Idol of Our Age: How the Religion of Humanity Subverts
+                    Christianity</i>.
+                </a>
+                <br>
+                <img src="graphics/Mahoney.jpg" width="14%" class="center-img">
             </li>
 
             <li>
@@ -343,6 +361,8 @@
                 <i>Tradition v. Rationalism: Voegelin, Oakeshott, Hayek, and
                     Others</i>.
                 </a>
+                <br>
+                <img src="graphics/Sportiello.jpg" width="14%" class="center-img">
             </li>
 
             <li>
