--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -79,8 +79,9 @@
                 Blaise Pascal:
                 <br>
                     <a href="bios.html#mahoney">
-                        Daniel Mahoney
+                        Daniel Mahoney,
                     </a>
+                    Assumption College
             </li>
 
             <li>
@@ -277,8 +278,10 @@
                 Analyticity
                 </a>
                 <br />
-                Thomas J. Brommage,
-                Sam Houston State University
+                    <a href="bios.html#brommage">
+                    Thomas J. Brommage,
+                    </a>
+                    Sam Houston State University
             </li>
 
             <li>
@@ -287,7 +290,9 @@
                 The Mystery of Human Existence
                 </a>
                 <br>
+                    <a href="bios.html#blake">
                     Nathanael Blake
+                    </a>
             </li>
 
             <li>
