--- a/AntiRats/word_len.html
+++ b/AntiRats/word_len.html
@@ -90,7 +90,8 @@
                     Brommage
                 </td>
                 <td>
-                     Who’s a Good Dogma?!?: Perspectives on Quine’s Critique of Analyticity
+                     Who’s a Good Dogma?!?:
+                     Perspectives on Quine’s Critique of Analyticity
                 </td>
                 <td>
                 </td>
@@ -156,6 +157,7 @@
                     The Hammer Goes to Monticello
                 </td>
                 <td>
+                    5000
                 </td>
             </tr>
             <tr>
@@ -174,9 +176,11 @@
                     Hörcher
                 </td>
                 <td>
-                    A Rational and Political Critique of Rationality in Politics
+                    A Rational and Political Critique of
+                    Rationality in Politics
                 </td>
                 <td>
+                    3300
                 </td>
             </tr>
             <tr>
@@ -249,6 +253,7 @@
                     MacIntyre and the Quest for the Human Telos
                 </td>
                 <td>
+                    4321
                 </td>
             </tr>
             <tr>
@@ -310,7 +315,7 @@
                     Entire book
                 </td>
                 <td class="key-col">
-                    22,000
+                    34,321
                 </td>
             </tr>
             </tbody>
