--- a/AntiRats/oakeshott.html
+++ b/AntiRats/oakeshott.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <link href="../style.css" rel="stylesheet" type="text/css"/>
         <title>
-            Michael Oakeshott: Rationalism is Irrational
+            Michael Oakeshott's Critique of Modern Rationalism
         </title>
     </head>
 
@@ -36,7 +36,7 @@
 	<a href="pub_details.html">Pub. Details</a>
 </p>
         <h1>
-            Michael Oakeshott: Rationalism is Irrational
+            Michael Oakeshott's Critique of Modern Rationalism
         </h1>
 
             <p class="author_info">
