Added more word length estimates.

--- a/AntiRats/gadamer.html
+++ b/AntiRats/gadamer.html
@@ -36,7 +36,7 @@
 	<a href="pub_details.html">Pub. Details</a>
 </p>
         <h1>
-            Anti-Rationalism and Hermeneutics
+            The Metaphysical Historicism of Hans-Georg Gadamer
         </h1>
 
         <p>
