--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -308,7 +308,7 @@
             <li>
                 Hans-Georg Gadamer:
                 <a href="gadamer.html">
-                Anti-Rationalism and Hermeneutics
+                    The Metaphysical Historicism of Hans-Georg Gadamer
                 </a>
                 <br>
                     <a href="bios.html#holston">
