--- a/AntiRats/word_len.html
+++ b/AntiRats/word_len.html
@@ -96,6 +96,7 @@
                      Perspectives on Quine’s Critique of Analyticity
                 </td>
                 <td>
+                    3500
                 </td>
             </tr>
             <tr>
@@ -150,6 +151,7 @@
                     Berlin and Moral Monism
                 </td>
                 <td>
+                    4000
                 </td>
             </tr>
             <tr>
@@ -168,7 +170,7 @@
                     Holston
                 </td>
                 <td>
-                    Hans-Georg Gadamer: Anti-Rationalism and Hermeneutics
+                    The Metaphysical Historicism of Hans-Georg Gadamer
                 </td>
                 <td>
                     3500
@@ -216,6 +218,7 @@
                     G.K. Chesterton
                 </td>
                 <td>
+                    3500
                 </td>
             </tr>
             <tr>
@@ -226,6 +229,7 @@
                     Michael Polanyi: A Scientist Against Scientism
                 </td>
                 <td>
+                    3500
                 </td>
             </tr>
             <tr>
@@ -236,16 +240,18 @@
                     Blaise Pascal
                 </td>
                 <td>
+                    3500
                 </td>
             </tr>
             <tr>
                 <td>
-                    Marsh
+                    Marsh / Powell
                 </td>
                 <td>
                     Fyodor Dostoevsky
                 </td>
                 <td>
+                    4000
                 </td>
             </tr>
             <tr>
@@ -290,6 +296,7 @@
                     The Uneasy Friendship Between Reason and Freedom
                 </td>
                 <td>
+                    3500
                 </td>
             </tr>
             <tr>
@@ -300,6 +307,7 @@
                     Ludwig Wittgenstein: Forms of Life
                 </td>
                 <td>
+                    3500
                 </td>
             </tr>
             <tr>
@@ -321,7 +329,7 @@
                     Entire book
                 </td>
                 <td class="key-col">
-                    61,900
+                    90,900
                 </td>
             </tr>
             </tbody>
