Changed Ferenc's title.

--- a/AntiRats/burke.html
+++ b/AntiRats/burke.html
@@ -5,7 +5,8 @@
         <meta charset="UTF-8">
         <link href="../style.css" rel="stylesheet" type="text/css"/>
         <title>
-            A Rational and Political Critique of Rationality in Politics
+            "The Age of Chivalry is Gone." Edmund Burke's Account of the Loss of Virtue,
+            and of the Birth of Modern Sophistry
         </title>
     </head>
 
@@ -36,7 +37,8 @@
 	<a href="pub_details.html">Pub. Details</a>
 </p>
         <h1>
-            A Rational and Political Critique of Rationality in Politics
+            "The Age of Chivalry is Gone." Edmund Burke's Account of the Loss of Virtue,
+            and of the Birth of Modern Sophistry
         </h1>
 
             <p class="author_info">
