--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -159,6 +159,7 @@
 
             <li>
                 G.K. Chesterton:
+                The Practical Mysticism of Chesterton
                 <br>
                     <a href="bios.html#kos">
                     Eric S. Kos,
