--- a/AntiRats/word_len.html
+++ b/AntiRats/word_len.html
@@ -215,7 +215,7 @@
                     Kos
                 </td>
                 <td>
-                    G.K. Chesterton
+                    The Practical Mysticism of Chesterton
                 </td>
                 <td>
                     3500
