Upped Lowney word length.

--- a/AntiRats/word_len.html
+++ b/AntiRats/word_len.html
@@ -181,7 +181,8 @@
                     Hörcher
                 </td>
                 <td>
-            "The Age of Chivalry is Gone." Edmund Burke's Account of the Loss of Virtue,
+            "The Age of Chivalry is Gone."
+            Edmund Burke's Account of the Loss of Virtue,
             and of the Birth of Modern Sophistry
                 </td>
                 <td>
@@ -229,7 +230,7 @@
                     Michael Polanyi: A Scientist Against Scientism
                 </td>
                 <td>
-                    3500
+                    5500
                 </td>
             </tr>
             <tr>
@@ -329,7 +330,7 @@
                     Entire book
                 </td>
                 <td class="key-col">
-                    92,600
+                    94,600
                 </td>
             </tr>
             </tbody>
