--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -182,7 +182,9 @@
 
             <li>
                 T.S. Eliot: 
-                Systems So Perfect That No One Has to Be Good
+                <a href="drafts/Eliot.pdf">
+                Pagans, Christians, Poets
+                </a>
                 <br>
                     <a href="bios.html#abel">
                     Corey Abel
