Heidegger draft posted.

--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -170,7 +170,7 @@
 
             <li>
                 Martin Heidegger:
-                <a href="heidegger.html">
+                <a href="drafts/Heidegger.pdf">
                 The Limiting Character of the Scientific Method
                 </a>
                 <br>
