Added Kirk and MacIntyre pdfs.

--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -290,7 +290,7 @@
 
             <li>
                 Russell Kirk:
-                <a href="kirk.html">
+                <a href="drafts/Kirk.pdf">
                 The Mystery of Human Existence
                 </a>
                 <br>
@@ -323,7 +323,7 @@
 
             <li>
                 Alasdair MacIntyre:
-                <a href="macintyre.html">
+                <a href="drafts/Macintyre.pdf">
                 Modern Moral Philosophy, Virtue, and Pluralism:  MacIntyre and
                 the Quest for the Human <i>Telos</i>
                 </a>
