--- a/AntiRats/vol2.html
+++ b/AntiRats/vol2.html
@@ -45,7 +45,7 @@
             </li>
 
             <li>
-                Lewis Carroll?
+                Lewis Carroll
             </li>
 
             <li>
