Updated Gadamer title.

--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -304,7 +304,8 @@
             <li>
                 Hans-Georg Gadamer:
                 <a href="drafts/Gadamer.pdf">
-                    The Metaphysical Historicism of Hans-Georg Gadamer
+                    Anti-rationalism, Relativism, and the Metaphysical Tradition:
+                    Situating Gadamer’s Philosophical Hermeneutics
                 </a>
                 <br>
                     <a href="bios.html#holston">
