Added Kierkegaard draft.

--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -116,8 +116,8 @@
 
             <li>
                 Søren Kierkegaard:
-                <a href="kierkegaard.html">
-                    Kierkegaard’s Critique of Political Rationalism
+                <a href="drafts/Kierkegaard.pdf">
+                    Kierkegaard's Later Critique of Political Rationalism
                 </a>
                 <br />
                     <a href="bios.html#wyllie">
