Adding dates and names to intro.

--- a/AntiRats/intro.html
+++ b/AntiRats/intro.html
@@ -61,7 +61,7 @@
 
         <p>
             Some may wonder at the mixed bag of thinkers we address: poets,
-            philosophers, economists, mathematicians, novelists, political
+            philosophers, economists, novelists, political
             theorists, urbanists, and philosophers. But there is unity in this
             diversity. Although these diverse authors worked in a variety of
             forms, they all sought to demonstrate the serious limitations in
@@ -72,6 +72,115 @@
             rather than dispersing our critical attention. In other words, we 
             hope that these divergent streams flow together into a river,
             rather than meandering out to sea like the channels of a delta.
+        </p>
+
+        <p>
+            The first of our critics of Enlightenment rationalism,
+            Blaise Pascal (1623–1662), wrote before the Enlightenment proper
+            was even under way. (Although, of course, it is generally nonsense
+            to declare that "The Age of X" began at some precise date, the
+            Enlightenment is generally said to have begun in the late 17th or
+            early 18th century.) Nevertheless, important progenitors of
+            Enlightenment rationalism, such as Francis Bacon and René
+            Descartes, had already been busy laying its groundworks.
+            <br />
+            [Remarks on Daniel Mahoney's piece.]
+        </p>
+
+        <p>
+            Edmund Burke (1729-1797) is the next thinker we tackle. Burke,
+            writing a century and more after Pascal's death, saw Enlightenment
+            ideas as leading to the French Revolution, of which he is
+            the most famous critic.
+        </p>
+
+        <p>
+            Alexis de Tocqueville (1805-1859)
+        </p>
+
+
+        <p>
+            While de Tocqueville focused on the political and social
+            consequences of the spread of Enlightenment ideas,
+            Søren Kierkegaard (1813-1855), often considered to be the
+            first existentialist philosopher, turned his attention
+            primarily to the theological and ethical conflicts following
+            in their wake.
+        </p>
+
+        <p>
+            Although the Enlightenment was birthed in Western Europe,
+            Enlightenment ideas spread both westwards, particularly to the
+            new nation of the United States, and also eastward, into Russia.
+            Fyodor Dostoevsky (1821-1881) ...
+        </p>
+
+        <p>
+            Friedrich Nietzsche (1844-1900) ...
+        </p>
+
+        <p>
+            G.K. Chesterton (1874-1936) ...
+        </p>
+
+        <p>
+            T.S. Eliot (1888-1965) ...
+        </p>
+
+        <p>
+            Ludwig Wittgenstein (1889-1951) ...
+        </p>
+
+        <p>
+            Martin Heidegger (1889-1976) ...
+        </p>
+
+        <p>
+            Gabriel Marcel (1889-1973) ...
+        </p>
+
+        <p>
+            Michael Polanyi (1891-1976) ... 
+        </p>
+
+        <p>
+            C.S. Lewis (1898-1963) ...
+        </p>
+
+        <p>
+            F.A. Hayek (1899-1992) ...
+        </p>
+
+        <p>
+            Hans-Georg Gadamer (1900-2002) ...
+        </p>
+
+        <p>
+            Eric Voegelin (1901-1985) ...
+        </p>
+
+        <p>
+            Michael Oakeshott (1901-1990) ...
+        </p>
+
+        <p>
+            W.V.O. Quine (1908-2000) ...
+        </p>
+
+        <p>
+            Isaiah Berlin (1909-1997) ...
+        </p>
+
+        <p>
+            Russell Kirk (1918-1994) ...
+        </p>
+
+        <p>
+            Jane Jacobs (1916-2006) ...
+        </p>
+
+        <p>
+            Alasdair MacIntyre (1929- ) ...
         </p>
 
         <hr>
