--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -60,7 +60,7 @@
             abstract, if available.
         </p>
 
-        <ul>
+        <ul class="nested">
             <li>
                 <a href="intro.html">
                 Introduction
