--- a/AntiRats/kirk.html
+++ b/AntiRats/kirk.html
@@ -26,15 +26,20 @@
             </p>
         </div>
 
-<p class="menu">
+<ul class="menu">
+	<li>
 	<a href="index.html">Home</a>
-	&nbsp;|&nbsp;
+	</li>
+	<li>
 	<a href="bios.html">Bios</a>
-	&nbsp;|&nbsp;
+	</li>
+	<li>
 	<a href="https://www.springer.com/series/15722">Book Series</a>
-	&nbsp;|&nbsp;
+	</li>
+	<li>
 	<a href="pub_details.html">Pub. Details</a>
-</p>
+	</li>
+</ul>
         <h1>
             Russell Kirk: The Mystery of Human Existence
         </h1>
