--- a/AntiRats/burke.html
+++ b/AntiRats/burke.html
@@ -27,15 +27,20 @@
             </p>
         </div>
 
-<p class="menu">
+<ul class="menu">
+	<li>
 	<a href="index.html">Home</a>
-	&nbsp;|&nbsp;
+	</li>
+	<li>
 	<a href="bios.html">Bios</a>
-	&nbsp;|&nbsp;
+	</li>
+	<li>
 	<a href="https://www.springer.com/series/15722">Book Series</a>
-	&nbsp;|&nbsp;
+	</li>
+	<li>
 	<a href="pub_details.html">Pub. Details</a>
-</p>
+	</li>
+</ul>
         <h1>
             "The Age of Chivalry is Gone." Edmund Burke's Account of the Loss of Virtue,
             and of the Birth of Modern Sophistry
