--- a/AntiRats/process.html
+++ b/AntiRats/process.html
@@ -21,19 +21,49 @@
 </head>
 <body>
         <div style="text-align:center">
-            <p>
+            <figure class="logo">
             <img
-             src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
-				width="8%"><img
-             src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
-				width="8%"><img
-             src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
-				width="8%"><img
-             src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
-				width="8%"><img
-             src="https://upload.wikimedia.org/wikipedia/commons/thumb/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg/170px-Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
-				width="8%">
-            </p>
+             src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="5%"><img
+             src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="5%"><img
+             src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="5%"><img
+             src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="5%"><img
+             src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="5%"><img
+             src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="5%"><img
+             src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="5%"><img
+             src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="5%"><img
+             src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="5%"><img
+             src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="5%"><img
+             src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="5%"><img
+             src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="5%"><img
+             src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="5%"><img
+             src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="5%"><img
+             src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="5%"><img
+             src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="5%"><img
+             src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="5%"><img
+             src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="5%"><img
+             src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="5%"><img
+             src="https://upload.wikimedia.org/wikipedia/commons/4/4f/Theo_van_Doesburg_Composition_VII_%28the_three_graces%29.jpg"
+				width="5%">
+            </figure>
         </div>
 
 <ul class="menu">
