Added Marcel pdf.

--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -225,7 +225,9 @@
 
             <li>
                 Gabriel Marcel:
-                Mystery and Problem, Being and Having
+                <a href="drafts/Marcel.pdf">
+                Having and Being
+                </a>
                 <br>
                     <a href="bios.html#knepper">
                     Steven Knepper,
