--- a/AntiRats/vol2.html
+++ b/AntiRats/vol2.html
@@ -84,6 +84,18 @@
             </li>
 
             <li>
+                Friedrich Nietzsche:
+                <a href="nietzsche.html">
+                The Hammer Goes to Monticello
+                </a>
+                <br>
+                    <a href="bios.html#garrison">
+                    Justin Garrison,
+                    </a>
+                    Roanoke College
+            </li>
+
+            <li>
                 Owen Barfield
             </li>
 
@@ -107,6 +119,11 @@
                 James C. Scott:
                 Seeing Like a Rationalist
             </li>
+
+            <li>
+                Nassim Nicholas Taleb
+            </li>
+
         </ul>
 
     </body>
