Adding new Burke, MacIntyre and Wittgenstein papers.

--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -202,8 +202,9 @@
             </li>
 
             <li>
-                Ludwig Wittgenstein:
-                Forms of Life
+                <a href="drafts/Wittgenstein.pdf">
+                Wittgenstein on Rationalism
+                </a>
                 <br>
                     <a href="bios.html#sportiello">
                     Daniel Sportiello
@@ -211,9 +212,8 @@
             </li>
 
             <li>
-                Martin Heidegger:
                 <a href="drafts/Heidegger.pdf">
-                The Limiting Character of the Scientific Method
+                Heidegger’s Critique of Rationalism and Modernity
                 </a>
                 <br>
                     <a href="bios.html#simmons">
