Added Voegelin draft.

--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -155,7 +155,7 @@
                 </a>
                 <br />
                     <a href="bios.html#wyllie">
-                    Rob Wyllie
+                    Robert Wyllie
                     </a>
             </li>
 
@@ -283,11 +283,12 @@
             </li>
 
             <li>
-                Eric Voegelin:
-                Don't Immanentize the Eschaton
+                <a href="drafts/Voegelin.pdf">
+                Eric Voegelin and Enlightenment Rationalism
+                </a>
                 <br>
                     <a href="bios.html#federici">
-                    Michael Federici,
+                    Michael P. Federici,
                     </a>
                     Middle Tennessee State University
             </li>
