--- a/AntiRats/vol2.html
+++ b/AntiRats/vol2.html
@@ -80,6 +80,15 @@
             </li>
 
             <li>
+                Fyodor Dostoevsky:
+                <br />
+                    <a href="bios.html#marsh">
+                    Leslie Marsh
+                    </a>,
+                    The University of British Columbia
+            </li>
+
+            <li>
                 Lewis Carroll
             </li>
 
