Updated Jin Jin's bio.

--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -244,14 +244,15 @@
                 <a name="jin">
                 <span class="contrib">Jin Jin</span>
                 </a>
-                received his BA Honours with Great Distinction in
-                Political Science from Concordia University in 2018, winning
-                the Renée Vautelet Prize as the most outstanding graduating
-                student in his program. He wrote his honours thesis “The Seas
-                to Rove and the Sea of Roving Men: Self-awareness in
-                Tocqueville’s Recollections and Fortnight in the Wilderness”
-                under the supervision of Travis D. Smith. Jin Jin has edited
-                two ESL textbook series for Chinese learners.
+                Jin Jin is a graduate student at the University of
+                Wisconsin-Madison. He received his B.A. with honors in
+                Political Science from Concordia University in Canada, winning
+                the Renée Vautelet Prize as the most outstanding student in his
+                program. His honors thesis, entitled “The Seas to Rove and the
+                Sea of Roving Men: Self-Awareness in Tocqueville’s
+                Recollections and Fortnight in the Wilderness,” discusses
+                Tocqueville’s self-awareness as a pathway to his thought on
+                human nature.
                 <br>
                 <img src="graphics/JinJin.jpg" width="14%" class="center-img">
             </li>
