dding final version of many papers.

--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -205,6 +205,8 @@
                 Wittgenstein on Rationalism
                 </a>
                 <br>
+                (<a href="wittgenstein.html">Abstract</a>)
+                <br>
                     <a href="bios.html#sportiello">
                     Daniel Sportiello
                     </a>
@@ -357,6 +359,8 @@
                 Jane Jacobs and the Knowledge
                 Problem in Cities
                 </a>
+                <br>
+                (<a href="jacobs.html">Abstract</a>)
                 <br>
                     <a href="bios.html#ikeda">
                     Sanford Ikeda,
