--- a/AntiRats/wittgenstein.html
+++ b/AntiRats/wittgenstein.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <link href="../style.css" rel="stylesheet" type="text/css"/>
         <title>
-            Kierkegaard’s Critique of Political Rationalism
+            Wittgenstein Abstract
         </title>
     </head>
 
@@ -71,27 +71,32 @@
         </div>
 
         <h1>
-            Kierkegaard’s Critique of Political Rationalism
+            Wittgenstein Abstract
         </h1>
 
             <p class="author_info">
-            Rob Wyllie
+            Daniel Sportiello
             </p>
+
             <h2>
                 Abstract
             </h2>
-            
+
             <p>
-            This chapter analyzes Søren Kierkegaard’s attempt in <i>Two
-                Ages</i> to refute the apparent rationality of political
-            discourse in public media during the 1840s.  Kierkegaard identifies
-            a separation between political speech and political action, because
-            in the present age citizens lack the passion to match their words
-            with deeds. Instead, Kierkegaard tries to unmask ulterior motives
-            like envy and status competition that motivate apparently rational
-            political discourse. The chapter aims to clarify the sense in which
-            Kierkegaard is a critic of political rationalism, the limits of his
-            critique, and its continuing relevance today.
+            If "rationalism" refers to the thesis that there is a right way to
+            do whatever it is that we do—a way that we, with our reason, can
+            discover—then Ludwig Wittgenstein is a critic of rationalism. For
+            our words and deeds are justified only by the rules of particular
+            language-games—but these language-games are themselves justified
+            only insofar as they meet our needs; certainly none of them need be
+            justified by reference to any of the others. Together, our
+            language-games constitute our form of life; though this form of
+            life is not entirely arbitrary—some of its features can be
+            explained by reference to our nature—nonetheless it could be
+            different in many ways. Indeed, it has been—and therefore probably
+            will be—different in many ways; on some level, we all know this.
+            Philosophy at its worst is the attempt to forget it; philosophy at
+            its best is, therefore, the attempt to remember it.
             </p>
 
     </body>
