--- a/AntiRats/jacobs.html
+++ b/AntiRats/jacobs.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <link href="../style.css" rel="stylesheet" type="text/css"/>
         <title>
-            Kierkegaard’s Critique of Political Rationalism
+            Jane Jacobs and the Knowledge Problem in Cities
         </title>
     </head>
 
@@ -71,28 +71,37 @@
         </div>
 
         <h1>
-            Kierkegaard’s Critique of Political Rationalism
+            Jane Jacobs and the Knowledge Problem in Cities
         </h1>
 
             <p class="author_info">
-            Rob Wyllie
+            Sanford Ikeda
             </p>
+
             <h2>
                 Abstract
             </h2>
-            
+
             <p>
-            This chapter analyzes Søren Kierkegaard’s attempt in <i>Two
-                Ages</i> to refute the apparent rationality of political
-            discourse in public media during the 1840s.  Kierkegaard identifies
-            a separation between political speech and political action, because
-            in the present age citizens lack the passion to match their words
-            with deeds. Instead, Kierkegaard tries to unmask ulterior motives
-            like envy and status competition that motivate apparently rational
-            political discourse. The chapter aims to clarify the sense in which
-            Kierkegaard is a critic of political rationalism, the limits of his
-            critique, and its continuing relevance today.
+                Any city that aspires to greatness will have something to
+                offend everyone.  That is a feature, not a bug.  In the absence
+                of perfect knowledge, people are attracted to a great city for
+                the opportunities, imagined and unimaginable, that it offers
+                them.  But the absence of perfect knowledge means they have to
+                experiment, and the accompanying trials and errors necessarily
+                generate discord, confusion, and disappointment along with
+                innovation, satisfaction, and success.  Understanding how the
+                institutions underlying successful cities – property rights,
+                exchange, and the norms of trust and reciprocity – promote or
+                hinder such a process is therefore essential for effective
+                urban policy.  The large-scale responses to these problems have
+                historically misunderstood the nature and significance of
+                cities and have ranged from Olmstead to Le Corbusier.  The
+                consequence of such “constructivist rationalist” approaches is
+                to stifle the emergent creativity of a great city.
             </p>
+
+
 
     </body>
 </html>
