--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -113,7 +113,9 @@
                 <a name="callahan">
                 <span class="contrib">Gene Callahan</span>
                  has a PhD in political theory from Cardiff
-                University. He is the author of <i>Economics for Real
+                University and a Master's in the philosophy
+                of the social sciences from LSE.
+                He is the author of <i>Economics for Real
                     People</i>, <i>Oakeshott on Rome and America</i>, 
                 and co-editor of <i>Tradition v. Rationalism</i>. He teaches
                 at New York University.
