Updating more bios and abstracts.

--- a/AntiRats/bios.html
+++ b/AntiRats/bios.html
@@ -154,15 +154,20 @@
             <li>
                 <a name="federici">
                 <span class="contrib">Michael Federici</span>
-                is Professor of Political Science at Middle Tennessee State
-                University and chair of the Department of Political Science and
-                International Relations. He has published five books, <i>The
-                Challenge of Populism</i>, <i>Eric Voegelin: The
-                Restoration of Order</i>, <i>The Political Philosophy of
-                Alexander Hamilton</i>, <i>Rethinking the Teaching of American
-                History</i> (an edited volume), and a co-edited collection of
-                essays entitled, <i>The Culture of Immodesty in American Life and
-                Politics: The Modest Republic</i>.
+                is professor and chair of the Political Science and
+                International Relations Department at Middle Tennessee State
+                University. He received his B.S. in economics from
+                Elizabethtown College and his M.A. and Ph.D. in politics from
+                The Catholic University of America. He is the former president
+                of the Academy of Philosophy and Letters and the author of
+                three books and three edited volumes:
+                <i>The Political Philosophy of Alexander Hamilton</i>,
+                <i>The Challenge of Populism</i>,
+                <i>Eric Voegelin: The Search for Order</i>,
+                <i>The Culture of Immodesty in American Life and Politics:
+                    The Modest Republic</i>,
+                <i>Rethinking the Teaching of American History</i>, and
+                <i>The Catholic Writings of Orestes Brownson</i>.
                 </a>
                 <br>
                 <img src="graphics/Federici.jpg" width="14%" class="center-img">
@@ -289,20 +294,6 @@
             </li>
 
             <li>
-                <a name="kos">
-                <span class="contrib">Eric S. Kos</span>
-                is associate professor of political science and Chair of the
-                Social Sciences Division at Siena Heights University in Adrian,
-                Michigan.  His work includes essays on Plato, Oakeshott, and
-                von Balthasar, and he has a monograph titled
-                <i>Michael Oakeshott, The
-                    Ancient Greeks and the Philosophical Study of Politics</i>
-                (Imprint Academic, 2007), and is currently editing a collection
-                of essays on Oakeshott, authority, and the state.
-                </a>
-            </li>
-
-            <li>
                 <a name="lowney">
                 <span class="contrib">Charles W. Lowney II</span>
                 is an Assistant Professor of Philosophy at
@@ -323,19 +314,6 @@
                 </a>
                 <br>
                 <img src="graphics/Lowney.jpg" width="14%" class="center-img">
-            </li>
-
-            <li>
-                <a name="mahoney">
-                <span class="contrib">Daniel J. Mahoney</span>,
-                Professor of Politics at Assumption College in
-                Worcester, Massachusetts, has written widely on politics and
-                political thought. His most recent book is 
-                <i>The Idol of Our Age: How the Religion of Humanity Subverts
-                    Christianity</i>.
-                </a>
-                <br>
-                <img src="graphics/Mahoney.jpg" width="14%" class="center-img">
             </li>
 
             <li>
@@ -360,10 +338,31 @@
             <li>
                 <a name="sheahan">
                 <span class="contrib">Luke Sheahan</span>
-                is a Post-Doctoral Associate and Research Fellow in the
-                Department of Political Science at Duke University. He
-                researches the intersection of First Amendment rights and
-                political theory.
+                Luke C. Sheahan is Assistant Professor of Political Science at
+                Duquesne University and a Non-Resident Scholar at the Program
+                for Research on Religion and Urban Civil Society (PRRUCS) at
+                the University of Pennsylvania. He researches the intersection
+                of First Amendment rights and political theory. Sheahan’s
+                scholarly articles and reviews have appeared in
+                <i>The Political Science Reviewer</i>,
+                <i>Humanitas</i>,
+                <i>Anamnesis</i>,
+                and <i>The Journal of Value Inquiry</i>
+                He has lectured widely on religious liberty,
+                freedom of speech, and freedom of association. His book
+                <i>Why Associations Matter: The Case for First Amendment Pluralism</i>
+                is forthcoming from the University Press of Kansas.
+                From 2018-2019,
+                Sheahan was Associate Director and Post-Doctoral Research
+                Fellow at the Freedom Project at Wellesley College and from
+                2016-2018, he was a postdoctoral associate in the Department of
+                Political Science at Duke University. He received a PhD and MA
+                in political theory from the Catholic University of America and
+                a B.S. in political science from the Honors College at Oregon
+                State University. Sheahan is a five-time recipient of the
+                Humane Studies Fellowship, a 2014 recipient of the Richard M.
+                Weaver Fellowship, and a 2018 recipient of the Leonard P.
+                Liggio Memorial Fellowship.
                 </a>
                 <br>
                 <img src="graphics/Sheahan.jpg" width="14%" class="center-img">
@@ -410,7 +409,7 @@
 
             <li>
                 <a name="wyllie">
-                <span class="contrib">Rob Wyllie</span>
+                <span class="contrib">Robert Wyllie</span>
                 </a>
                  is a Ph.D. candidate in the Department of Political Science at
                  the University of Notre Dame. His research focuses upon
