Added Hayek abstract.

--- a/AntiRats/index.html
+++ b/AntiRats/index.html
@@ -254,7 +254,7 @@
             </li>
 
             <li>
-                <a href="drafts/Hayek.pdf">
+                <a href="hayek.html">
                 F.A. Hayek:
                 Post-Atomic Liberalism
                 </a>
